@@ -4,6 +4,7 @@ Revision history for FusionInventory agent
 
 netdiscovery/netinventory:
 * Updated Ricoh printers support
+* Updated Zebra printers support
 
 2.5.2 Mon, 16 Dec 2019
 
